--- a/app/src/main/res/layout/show_listing.xml
+++ b/app/src/main/res/layout/show_listing.xml
@@ -5,19 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="192dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableLayout
             android:id="@+id/listingtable"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:isScrollContainer="true">
+            android:divider="?attr/dividerHorizontal"
+            android:isScrollContainer="true"
+            android:showDividers="middle|beginning|end"
+            app:layout_constraintTop_toBottomOf="@+id/tableRow">
 
         </TableLayout>
 
