--- a/app/src/main/res/menu/menubar.xml
+++ b/app/src/main/res/menu/menubar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <!--    <item-->
 <!--        android:id="@+id/dropdown_menu"-->
 <!--        android:icon="@drawable/ic_baseline_menu_24"-->
@@ -63,7 +64,8 @@
         />
     <item
         android:id="@+id/preferences"
+        android:orderInCategory="100"
         android:title="@string/preferences"
-        />
+        app:showAsAction="never" />
 
 </menu>
