--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,7 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/black</item>
     </style>
+<!--    <style name="RemoveButton">-->
+<!--        <item name="android:colorBackground"></item>-->
+<!--    </style>-->
 </resources>
