--- a/app/src/main/res/layout/saved_list_items.xml
+++ b/app/src/main/res/layout/saved_list_items.xml
@@ -47,6 +47,7 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginEnd="15dp"
                 android:backgroundTint="#FF0000"
+                android:onClick="removeButtonHandler"
                 />
         </LinearLayout>
 
