--- a/app/src/main/res/layout/activity_category_list2.xml
+++ b/app/src/main/res/layout/activity_category_list2.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".CategoryList">
 
+    <Spinner
+        android:id="@+id/sortDropdown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:spinnerMode="dropdown"
+        />
+
 <!--    <ListView-->
 <!--        android:id="@+id/categoryList"-->
 <!--        android:layout_width="match_parent"-->
