clean up ignored files

--- a/app/src/main/res/menu/menubar.xml
+++ b/app/src/main/res/menu/menubar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <!--    <item-->
 <!--        android:id="@+id/dropdown_menu"-->
@@ -13,32 +14,32 @@
 <!--    </item>-->
     <item
         android:id="@+id/showlisting"
-        android:title="Show&#160;Listing"
+        android:title="@string/show_160_listing"
         >
         <menu>
             <item
                 android:id="@+id/showAll"
-                android:title="Show&#160;All"
+                android:title="@string/show_160_all"
                 />
             <item
                 android:id="@+id/preLOI"
-                android:title="Pre&#160;LOI"
+                android:title="@string/pre_160_loi"
                 />
             <item
                 android:id="@+id/defAgree"
-                android:title="Definitive&#160;Agreement"
+                android:title="@string/definitive_160_agreement"
                 />
             <item
                 android:id="@+id/optionChads"
-                android:title="Option&#160;Chads"
+                android:title="@string/option_160_chads"
                 />
             <item
                 android:id="@+id/preUnit"
-                android:title="Pre&#160;Unit&#160;Split"
+                android:title="@string/pre_160_unit_160_split"
                 />
             <item
                 android:id="@+id/preIPO"
-                android:title="Pre&#160;IPO"
+                android:title="@string/pre_160_ipo"
                 />
         </menu>
     </item>
@@ -53,7 +54,31 @@
     <item
         android:id="@+id/spacliveprices"
         android:title="@string/spac_160_live_160_prices"
-        />
+        >
+        <menu >
+            <item
+                android:id="@+id/all"
+                android:title="@string/all" />
+            <item
+                android:id="@+id/top10DailyPriceChange"
+                android:title="@string/top_10_daily_price_change" />
+            <item
+                android:id="@+id/bottom10DailyPriceChange"
+                android:title="@string/bottom_10_daily_price_change" />
+            <item
+                android:id="@+id/top10WeeklyPriceChange"
+                android:title="@string/top_10_weekly_price_change" />
+            <item
+                android:id="@+id/bottom10WeeklyPriceChange"
+                android:title="@string/bottom_10_weekly_price_change" />
+            <item
+                android:id="@+id/top10MonthlyPriceChange"
+                android:title="@string/top_10_monthly_price_change" />
+            <item
+                android:id="@+id/bottom10MonthlyPriceChange"
+                android:title="@string/bottom_10_monthly_price_change" />
+        </menu>
+    </item>
     <item
         android:id="@+id/addremove"
         android:title="@string/add_remove"
