--- a/app/src/main/res/menu/menubar.xml
+++ b/app/src/main/res/menu/menubar.xml
@@ -53,7 +53,31 @@
     <item
         android:id="@+id/spacliveprices"
         android:title="@string/spac_160_live_160_prices"
-        />
+        >
+        <menu >
+            <item
+                android:id="@+id/all"
+                android:title="@string/all" />
+            <item
+                android:id="@+id/top10DailyPriceChange"
+                android:title="@string/top_10_daily_price_change" />
+            <item
+                android:id="@+id/bottom10DailyPriceChange"
+                android:title="@string/bottom_10_daily_price_change" />
+            <item
+                android:id="@+id/top10WeeklyPriceChange"
+                android:title="@string/top_10_weekly_price_change" />
+            <item
+                android:id="@+id/bottom10WeeklyPriceChange"
+                android:title="@string/bottom_10_weekly_price_change" />
+            <item
+                android:id="@+id/top10MonthlyPriceChange"
+                android:title="@string/top_10_monthly_price_change" />
+            <item
+                android:id="@+id/bottom10MonthlyPriceChange"
+                android:title="@string/bottom_10_monthly_price_change" />
+        </menu>
+    </item>
     <item
         android:id="@+id/addremove"
         android:title="@string/add_remove"
