--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,57 +22,79 @@
 <!--        app:srcCompat="@drawable/welcome" />-->
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:orientation="vertical"
-            >
-            <View style="@style/Divider"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <View style="@style/Divider" />
+
             <TextView
                 android:id="@+id/savedlabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/saved_spacs"
-                android:textSize="24sp"
-                android:layout_marginStart="15dp"
-                />
+                android:textSize="24sp" />
 
             <androidx.recyclerview.widget.RecyclerView
+
                 android:id="@+id/recyclerViewSaved"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="48dp"
                 android:scrollbars="vertical"
-                tools:listitem="@layout/saved_list_items"
-                />
+                tools:listitem="@layout/saved_list_items" />
 
         </LinearLayout>
 
 
-<!--        <TextView-->
-<!--            android:id="@+id/listsearch"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="8dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:text="@string/add_spacs"-->
-<!--            android:textSize="24sp"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            android:layout_marginStart="8dp" />-->
+        <!--        <TextView-->
+        <!--            android:id="@+id/listsearch"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginLeft="8dp"-->
+        <!--            android:layout_marginTop="8dp"-->
+        <!--            android:text="@string/add_spacs"-->
+        <!--            android:textSize="24sp"-->
+        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent"-->
+        <!--            android:layout_marginStart="8dp" />-->
 
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/mainsearchbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="Search"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/mainsearchtext"
+        android:layout_width="260dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="40dp"
+        android:hint="Search..."
+        android:singleLine="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
