--- a/app/src/main/res/layout/activity_category_list2.xml
+++ b/app/src/main/res/layout/activity_category_list2.xml
@@ -20,13 +20,13 @@
 
             android:spinnerMode="dropdown"
             />
-        <Button
-            android:id="@+id/refreshButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Refresh"
-            android:onClick="refreshButtonHandler"
-            />
+<!--        <Button-->
+<!--            android:id="@+id/refreshButton"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/Refresh"-->
+<!--            android:onClick="refreshButtonHandler"-->
+<!--            />-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
