--- a/app/src/main/res/layout/list_top_weekly_spac.xml
+++ b/app/src/main/res/layout/list_top_weekly_spac.xml
@@ -1,72 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:scrollbars="horizontal"
-    android:scrollbarAlwaysDrawHorizontalTrack="true" >
-
-    <HorizontalScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+    android:orientation="vertical"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/item_title1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            />
+        <TextView
+            android:id="@+id/item_title3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
+            android:textSize="18sp"
+            />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/item_title1"
-                android:layout_width="101dp"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp"
+        >
+        <TextView
+            android:id="@+id/item_title4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:textSize="18sp"
+            />
+        <TextView
+            android:id="@+id/item_title2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
+            android:textSize="18sp"
+            />
+    </LinearLayout>
 
-            <View
-                android:id="@+id/divider1"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/black"/>
-
-            <TextView
-                android:id="@+id/item_title2"
-                android:layout_width="99dp"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
-
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/black"/>
-
-            <TextView
-                android:id="@+id/item_title3"
-                android:layout_width="110dp"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
-
-            <View
-                android:id="@+id/divider3"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/black"/>
-            <TextView
-                android:id="@+id/item_title4"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
-
-            <View
-                android:id="@+id/divider4"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/black"/>
-
-        </LinearLayout>
-    </HorizontalScrollView>
-
-</com.google.android.material.card.MaterialCardView>
+    <View style="@style/Divider"/>
+</LinearLayout>
