--- a/app/src/main/res/layout/activity_category_list2.xml
+++ b/app/src/main/res/layout/activity_category_list2.xml
@@ -21,13 +21,17 @@
             android:layout_height="wrap_content"
             android:spinnerMode="dropdown"
             />
-<!--        <Button-->
-<!--            android:id="@+id/refreshButton"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@string/Refresh"-->
-<!--            android:onClick="refreshButtonHandler"-->
-<!--            />-->
+        <Button
+            android:id="@+id/refreshButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Refresh"
+            android:onClick="refreshButtonHandler"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
