#17 Implemented onClick functionality to the Live Prices Page for viewing SPAC information. Currently items can be added to the saved list from Live Prices, but it does not save any information to the database and crashes when clicked on the main page.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,7 +2,7 @@
 
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title='Select the information to display in the "Show All Listings" page.'>
+    <PreferenceCategory android:title='Select the information to display in the listings pages.'>
 
     </PreferenceCategory>
     <PreferenceCategory android:title="Pre - LOI">
