--- a/app/src/main/res/layout/activity_search_social_media.xml
+++ b/app/src/main/res/layout/activity_search_social_media.xml
@@ -34,8 +34,22 @@
         android:layout_marginRight="8dp"
         android:text="@string/google"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSearch" />
+
+    <ImageView
+        android:id="@+id/google"
+        android:layout_width="62dp"
+        android:layout_height="32dp"
+        android:contentDescription="@string/google"
+        app:layout_constraintBottom_toTopOf="@+id/btnTwitter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="5.0"
+        app:layout_constraintStart_toEndOf="@+id/btnTwitter"
+        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
+        app:layout_constraintVertical_bias="1.5"
+        app:srcCompat="@drawable/google_color" />
 
     <Button
         android:id="@+id/btnTwitter"
@@ -51,6 +65,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />
 
+    <ImageView
+        android:id="@+id/twitter"
+        android:layout_width="62dp"
+        android:layout_height="32dp"
+        android:contentDescription="@string/twitter"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/btnReddit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="5.0"
+        app:layout_constraintStart_toEndOf="@+id/btnReddit"
+        app:layout_constraintTop_toBottomOf="@+id/btnTwitter"
+        app:layout_constraintVertical_bias="1.5"
+        app:srcCompat="@drawable/iconfinder_twitter_circle_294709"
+        tools:visibility="visible" />
+
     <Button
         android:id="@+id/btnReddit"
         android:layout_width="0dp"
@@ -65,6 +94,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnTwitter" />
 
+    <ImageView
+        android:id="@+id/reddit"
+        android:layout_width="62dp"
+        android:layout_height="32dp"
+        android:contentDescription="@string/reddit"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/btnFacebook"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="5.0"
+        app:layout_constraintStart_toEndOf="@+id/btnFacebook"
+        app:layout_constraintTop_toBottomOf="@+id/btnReddit"
+        app:layout_constraintVertical_bias="1.5"
+        app:srcCompat="@drawable/iconfinder_reddit_4550872_121349"
+        tools:visibility="visible" />
+
     <Button
         android:id="@+id/btnFacebook"
         android:layout_width="0dp"
@@ -76,9 +120,24 @@
         android:layout_marginRight="8dp"
         android:text="@string/facebook"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnReddit" />
+
+    <ImageView
+        android:id="@+id/facebook"
+        android:layout_width="62dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="208dp"
+        android:layout_marginRight="208dp"
+        android:contentDescription="@string/facebook"
+        android:visibility="visible"
+        app:layout_constraintHorizontal_bias="5.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
+        app:layout_constraintVertical_bias="1.5"
+        app:srcCompat="@drawable/iconfinder_facebook_834722"
+        tools:visibility="visible" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
