#101 #107 #109 Changed how top/bottom live prices react to clicks on SPACs not in the SPAC sheet, added in icons for increase / decrease in price for top/bottom live prices, added in search icons for all pages with search bars, added titles for each page, added icons to the initial search social media page, and added searching functionality to the webview search social media page.

--- a/app/src/main/res/layout/show_listing.xml
+++ b/app/src/main/res/layout/show_listing.xml
@@ -89,6 +89,8 @@
         android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:drawableLeft="@drawable/search_icon_32x32"
+        android:drawablePadding="8dp"
         android:hint="Search..."
         android:singleLine="true"
         app:layout_constraintStart_toStartOf="parent"
