--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="40dp"
+        android:drawableLeft="@drawable/search_icon_32x32"
+        android:drawablePadding="8dp"
         android:hint="Search..."
         android:singleLine="true"
         app:layout_constraintStart_toStartOf="parent"
