Task #109 added menu hamburger to all pages

--- a/app/src/main/res/menu/menubar.xml
+++ b/app/src/main/res/menu/menubar.xml
@@ -80,7 +80,7 @@
     </item>
     <item
         android:id="@+id/addremove"
-        android:title="@string/add_remove"
+        android:title="Saved List"
         />
     <item
         android:id="@+id/preferences"
